# shared_lib

./: Cargo.toml  LICENSE  README.md
libs/calculator/: Cargo.toml
libs/calculator/src/: lib.rs
shared_lib/: Cargo.toml
shared_lib/src/: lib.rs
shared_lib/tests/: integration.rs
